# BasedCarAPI

./: Cargo.toml  README.md
data/: years.json
data/years/1999/: makes.json
data/years/1999/BMW/: models.json
data/years/1999/Chevrolet/: models.json
data/years/1999/Daewoo/: models.json
data/years/1999/Nissan/: models.json
data/years/2000/: makes.json
data/years/2000/Acura/: models.json
data/years/2000/BMW/: models.json
data/years/2000/Cadillac/: models.json
data/years/2000/Chevrolet/: models.json
data/years/2000/Chrysler/: models.json
data/years/2000/Daewoo/: models.json
data/years/2000/Dodge/: models.json
data/years/2000/Ford/: models.json
data/years/2000/GMC/: models.json
data/years/2000/Honda/: models.json
data/years/2000/Hyundai/: models.json
data/years/2001/: makes.json
data/years/2002/: makes.json
data/years/2003/: makes.json
data/years/2004/: makes.json
data/years/2005/: makes.json
data/years/2006/: makes.json
data/years/2007/: makes.json
data/years/2008/: makes.json
data/years/2009/: makes.json
data/years/2010/: makes.json
data/years/2011/: makes.json
data/years/2012/: makes.json
data/years/2013/: makes.json
data/years/2014/: makes.json
data/years/2015/: makes.json
data/years/2016/: makes.json
data/years/2017/: makes.json
data/years/2018/: makes.json
data/years/2019/: makes.json
data/years/2020/: makes.json
data/years/2021/: makes.json
data/years/2022/: makes.json
data/years/2023/: makes.json
data/years/2024/: makes.json
src/: main.rs  main_global.rs
(+909 files in other folders)
