[package]
name = "autoauto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
image = "0.24.7"
imageproc = { version = "0.23.0", features = [] }
reqwest = { version = "0.11.22", features = ["stream"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
